tool/tests/snapshots/dotnet_target__generation_using_default_config@RawFfiResultBoxMyStructBoxMyLibError.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct FfiResultBoxMyStructBoxMyLibError
{
#if __IOS__
    private const string NativeLib = "librust.framework/librust";
#else
    private const string NativeLib = "rust";
#endif

    [StructLayout(LayoutKind.Explicit)]
    private unsafe struct InnerUnion
    {
        [FieldOffset(0)]
        internal MyStruct* ok;
        [FieldOffset(0)]
        internal MyLibError* err;
    }

    private InnerUnion _inner;

    [MarshalAs(UnmanagedType.U1)]
    public bool isOk;

    public unsafe MyStruct* Ok
    {
        get
        {
            return _inner.ok;
        }
    }

    public unsafe MyLibError* Err
    {
        get
        {
            return _inner.err;
        }
    }

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "result_box_MyStruct_box_MyLibError_destroy", ExactSpelling = true)]
    public static unsafe extern void Destroy(IntPtr self);
}

