tool/tests/snapshots/dotnet_target__generation_using_default_config@RawMyLibError.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct MyLibError
{
#if __IOS__
    private const string NativeLib = "librust.framework/librust";
#else
    private const string NativeLib = "rust";
#endif

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyLibError_to_display", ExactSpelling = true)]
    public static unsafe extern void ToDisplay(DiplomatWriteable* out);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyLibError_destroy", ExactSpelling = true)]
    public static unsafe extern void Destroy(MyLibError* self);
}

